--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,6 +2,7 @@
 body {
     font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
+    
 }
 .text-primary {
     color: rgba(253,110,10,1);
@@ -22,6 +23,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin:0 200px;
 }
 .nav-title {
     color: #181818;
@@ -41,4 +43,18 @@ nav li {
 li a {
     text-decoration: none;
     color: #474747;
+}
+/* header related styles */
+.header {
+    background-color: #FFF8F3;
+   
+}
+.banner {
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.profile-pic {
+    width: 584px;
+height: 676px;
 }
