--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,6 +24,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     margin:0 200px;
+    
 }
 .nav-title {
     color: #181818;
@@ -44,17 +45,60 @@ li a {
     text-decoration: none;
     color: #474747;
 }
+nav h3 {
+    padding-left: 100px
+}
 /* header related styles */
 .header {
     background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-position: bottom right;
+    background-repeat: no-repeat;
    
 }
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0 300px;
     display: flex;
     align-items: center;
 }
 .profile-pic {
     width: 584px;
 height: 676px;
+padding-left: 530px;
+
+}
+.banner-greeting {
+    font-weight: 600;
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+    
+}
+.banner-title {
+    color: #181818;
+    font-size: 85px;
+   font-weight: 700;
+   margin-top: 5px;
+  margin-bottom: 20px;
+}
+.banner-para {
+    color:#757575;
+    font-size: 18px;
+    font-weight: 400;
+line-height: 30px;
+display: flex;
+width: 585px;
+flex-direction: column;
+margin-top: 0;
+margin-bottom: 51px;
+}
+.btn {
+    padding: 18px 35px 19px 36px;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: white;
+    color: rgba(253,110,10,1);
+    border-radius: 5px;
+    border-color: rgba(253,110,10,1);
+    margin-left: 30px;
 }
