--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,24 @@ body {
   
 }
 
+.section-title {
+    color: #181818;
+text-align: center;
+font-size: 35px;
+font-weight: 700;
+
+
+}
+
+.section-description {
+    
+     color: #757575;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+
+} 
+
 /* nav related styles */
 nav {
     display: flex;
@@ -102,3 +120,17 @@ margin-bottom: 51px;
     border-color: rgba(253,110,10,1);
     margin-left: 30px;
 }
+/* main related styles */
+
+/* about related styles */
+
+.about {
+    border-radius: 10px;
+background: #FFF8F3;
+padding :130px;
+text-align: center; 
+margin: 130px 0;
+
+}
+
+
