--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -121,6 +121,10 @@ margin-bottom: 51px;
     margin-left: 30px;
 }
 /* main related styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /* about related styles */
 
@@ -132,5 +136,26 @@ text-align: center;
 margin: 130px 0;
 
 }
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+   
+}
+ .about-info {
+    
+
+    color: #757575;
+    text-align: center;
+font-size: 20px;
+font-weight: 400;
+
+} 
+.info-value {
+    font-weight: bolder;
+    
+}
+
+
+
 
 
