added 2nd part of wd

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -154,6 +154,15 @@ font-weight: 400;
     font-weight: bolder;
     
 }
+#what {
+    padding: 30px 150px;
+}
+.skill-container {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
 
 
 
