--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -160,10 +160,34 @@ font-weight: 400;
 .skill-container {
     display: flex;
     justify-content: space-around;
+    gap:24px;
+}
+.skill {
+    padding:30px;
+    border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
     
 }
+.skill-details {
+    color: var(--dark-03, #757575);
+font-size: 16px;
+font-weight: 400;
 
+}
+.cmt {
+    display: flex;
+    justify-content: space-around;
+}
 
+#sec {
+    margin-top: 130px;
+}
+.details {
+    color: var(--dark-03, #757575);
+font-size: 16px;
+font-weight: 400;
+}
 
 
 
