--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -177,7 +177,10 @@ font-weight: 400;
 }
 .cmt {
     display: flex;
-    justify-content: space-around;
+    gap: 50px;
+}
+hr {
+    margin: 30px;
 }
 
 #sec {
@@ -188,6 +191,11 @@ font-weight: 400;
 font-size: 16px;
 font-weight: 400;
 }
+.download-cv {
+    text-align: center;
+    margin-top: 50px;
+}
+   
 
 
 
