--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -194,8 +194,44 @@ font-weight: 400;
 .download-cv {
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 90px;
 }
-   
+   /* footer related styles */
+
+   footer {
+    display: flex;
+    background-color: #FFF8F3;;
+    justify-content: space-around;
+    padding: 130px 200px;
+    gap: 100px;
+   }
+   .text {
+    color: #474747;
+font-size: 16px;
+font-weight: 400;
+
+
+;
+   }
+
+.img {
+    display: flex;
+    gap: 48px;
+}
+.column {
+    width: 50%;
+}
+input, textarea {
+    padding: 18px 35px;
+    border-radius: 5px;
+background:#FFF;
+color: #757575;
+font-size: 16px;
+font-weight: 400;
+border: 0;
+width: 100%;
+
+}
 
 
 
