--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -64,18 +64,19 @@ li a {
     color: #474747;
 }
 nav h3 {
-    padding-left: 100px
+    padding-left: 0px
 }
 /* header related styles */
 .header {
     background-color: #FFF8F3;
-    background-image: url(../images/header_bg.png);
-    background-position: bottom right;
+    background-image: url(../images/header_bg.png),url('../images/developer.png');
+    background-position: bottom right,top left;
     background-repeat: no-repeat;
+    
    
 }
 .banner {
-    padding: 30px 30px 0 300px;
+    padding: 30px 30px 0 180px;
     display: flex;
     align-items: center;
 }
